src/app/models/[id]/modelDetail.module.css
.navbarWrapper {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    margin-left: 50%;
    transform: translateX(-50%);
}

.wrapper {
    width: 85%;
    height: 28rem;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: flex-start;
    margin-top: 2rem;
    margin-left: 50%;
    transform: translateX(-50%);
}

.heroWrap {
    justify-content: center;
    width: 100%;
    height: auto;
    margin-left: 50%;
    transform: translateX(-50%);
    border: 1px solid #FFFFFF29;
    border-radius: 48px;
    background-color: rgba(27, 27, 27, 0.38);
    display: flex;
    align-items: center;
    padding: 2rem 5rem;
    gap: 3rem;
    position: relative;
    box-shadow: 0px 4px 37px 0px #000000;
}

#md-hero {
    width: 14rem;
    height: 14rem;
    aspect-ratio: 1 / 1;
    border-radius: 48px;
    overflow: hidden;
    object-fit: cover;
}

.descriptionAndCategory {
    width: 92%;
    min-height: 10rem;
    height: auto;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: space-between;
    gap: 2rem;
    text-align: start;
}

.md_description {
    opacity: 0.7;
    margin-bottom: 1.5rem;
}

.heroWrap img {
    width: 28rem !important;
    height: 28rem !important;
}

.modelsTitle {
    color: #fff !important;
    font-size: 1.8rem;
    margin: 0px;
    font-family: "Nunito", sans-serif;
    font-weight: 800;
    font-style: Heavy;
    font-size: 38px;
    line-height: 137%;
    letter-spacing: 0%;
}

#md-description {
    opacity: 0.5;
    width: 100%;
    font-family: 'Nunito', sans-serif;
    font-weight: 600;
    font-style: SemiBold;
    font-size: 16px;
    line-height: 150%;
    letter-spacing: -3%;
}

.backLink {
    width: 14rem;
    display: flex;
    align-items: center;
    gap: 1rem;
    margin-bottom: 16px;
    font-weight: 700;
    font-size: 18px;
    color: #fff;
    text-decoration: none;
    padding-left: 6px;
}

.backLink:hover {
    text-decoration: underline;
}

.categoryInfo {
    /* font-family: Nunito; */
    font-weight: 800;
    font-style: ExtraBold;
    font-size: 16px;
    line-height: 137%;
    letter-spacing: -3%;
}

.relatedModels {
    width: 100%;
    height: 30rem;
    display: flex;
    justify-content: center;
    align-items: center;
}

.cards {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    gap: 2rem;
}

.modelsGrid {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 1rem;
    width: 35%;
    justify-items: center;
}

.modelCard {
    width: 80px;
    height: 80px;
    background-color: rgba(27, 27, 27, 0.38);
    border-radius: 20px;
    border: 0.21px solid #FFFFFF29;
    object-fit: cover;
    text-align: center;
}

.footer {
    flex-direction: column;
    align-items: center;
    width: 1104.48px;
    height: 550px;
    margin-bottom: 0;
    padding: 30px;
    display: flex;
    position: relative;
    margin-left: 50%;
    transform: translateX(-50%);
    margin-top: 20rem;
}

.earth_2 {
    position: absolute;
    z-index: 100;
    background: url(../../images/earth_2.png) bottom / cover no-repeat;
    background-blend-mode: multiply;
    filter: drop-shadow(0 0 15rem #4384D852);
    background-size: 65rem 17rem;
    width: 100%;
    height: 100%;
}

.boat {
    position: absolute;
    bottom: 43.5%;
    width: 50px;
    height: 50px;
}

.travel_animator {
    position: absolute;
    color: #0E86FF;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%;
}

.travel_animator img {
    object-fit: cover;
}

.sub_heading {
    background-blend-mode: multiply;
    background: url(../../images/sub_heading_text.svg) center / 21rem 12rem no-repeat;
    width: 21rem;
    height: 12rem;
    position: absolute;
    bottom: 20.625rem;
    left: 4rem;
    transform: rotate(-2deg);
}

.privacy_section {
    position: absolute;
    bottom: 100px;
    width: 430px;
    height: 38px;
    display: flex;
    align-items: center;
    justify-content: space-between;
    z-index: 1000000;
}

.privacy_policy {
    height: 100%;
    background: black;
    color: white;
    opacity: 51%;
    backdrop-filter: blur(40.1px);
    -webkit-backdrop-filter: blur(8px);
    border-radius: 24px;
    padding: 8px 20px;
    font-weight: 500;
    font-style: Medium;
    font-size: 14px;
    letter-spacing: -3%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.copyright_section {
    position: absolute;
    bottom: 30px;
    z-index: 1000000;
}
/* ... */

